--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ body {
     margin: 5px;
 }
 
+#img {
+    display: flex;
+    margin: 5px;
+    width: 50%;
+}
+
+img {
+    width: 100%;
+}
+
 iframe {
     width: 100%;
 }
