--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
+:root {
+    --ecriture: black;
+    --background: white;
+    --police: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+html {
+    color-scheme: dark !important;
+    background: var(--background);
+    color: var(--ecriture);
+    font-size: 1.5rem;
+    font-family: var(--police);
+}
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    background-color: #f2f2f2;
+    background-color: var(--background);
 }
 
 #iframe {
     display: flex;
-    height: 810px;
     margin: 5px;
+    background-color: transparent;
 }
 
 #img {
     display: flex;
     margin: 5px;
-    width: 50%;
+    background-color: transparent;
 }
 
 img {
@@ -22,7 +36,8 @@ img {
 }
 
 iframe {
-    width: 100%;
+    width: 553px;
+    height: 794px;
 }
 
 label {
@@ -38,6 +53,7 @@ input[type="text"] {
     font-size: 16px;
     line-height: 1.5;
     width: 300px;
+    border-color: rgb(62, 68, 70);
 }
 
 input[type="radio"] {
@@ -76,4 +92,8 @@ button:last-child {
 
 h1 {
     font-size: 15px;
+}
+
+a {
+    color: #3391ff;
 }
