--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 :root {
+    --color-scheme : light;
     --ecriture: black;
     --background: white;
     --police: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 html {
-    color-scheme: dark !important;
+    /* color-scheme: dark !important; */
+    color-scheme: var(--color-scheme);
     background: var(--background);
     color: var(--ecriture);
     font-size: 1.5rem;
@@ -53,7 +55,7 @@ input[type="text"] {
     font-size: 16px;
     line-height: 1.5;
     width: 300px;
-    border-color: rgb(62, 68, 70);
+    border-color: var(--background);
 }
 
 input[type="radio"] {
