--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 :root {
+/* -webkit-user-select: none; */
+    -webkit-touch-callout: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
     --color-scheme : light;
     --ecriture: black;
     --background: white;
