--- a/style2.css
+++ b/style2.css
@@ -8,6 +8,7 @@
     --ecriture: black;
     --background: white;
     --police: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --scalenb : 0.5
 }
 
 html {
@@ -30,24 +31,23 @@ body {
     display: flex;
     /* width:30vh; */
     height:76vh;
+    transform: scale(var(--scalenb));
+    position: relative;
+    transform-origin: top left;
+    margin: 10px;
 }
 
 #iframe-1 {
     display: flex;
     /* margin: 5px; */
     background-color: transparent;
-    transform: scale(0.5);
-    position: relative;
-    transform-origin: top left;
+    
 }
 
 #iframe-2 {
     display: flex;
     /* margin: 5px; */
     background-color: transparent;
-    transform: scale(0.5);
-    position: relative;
-    transform-origin: top right;
 }
 
 .iframe-div-1 {
@@ -77,6 +77,9 @@ iframe {
     display: flex;
     margin: 5px;
     background-color: transparent;
+    transform: scale(var(--scalenb));
+    position: relative;
+    transform-origin: top left;
 }
 
 img {
@@ -86,6 +89,13 @@ img {
 label {
     display: block;
     margin: 10px;
+}
+
+#changepagebutton {
+    position: fixed;
+    bottom: 0px;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 input[type="text"] {
