--- a/style2.css
+++ b/style2.css
@@ -8,7 +8,9 @@
     --ecriture: black;
     --background: white;
     --police: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    --scalenb : 0.5
+    --scalenb : 0.5;
+    --iframe-width : 560px;
+    --iframe-height : 800px;
 }
 
 html {
@@ -52,14 +54,18 @@ body {
 
 .iframe-div-1 {
     /* display: block; */
-    height: 2043px;
-    width: 1477px;
+    /* height: 2043px;
+    width: 1477px; */
+    height: var(--iframe-height);
+    width: var(--iframe-width);
 }
 
 .iframe-div-2 {
     /* display: block; */
-    height: 2043px;
-    width: 1477px;
+    /* height: 2043px;
+    width: 1477px; */
+    height: var(--iframe-height);
+    width: var(--iframe-width);
 }
 
 iframe {
