--- a/style.css
+++ b/style.css
@@ -8,12 +8,14 @@
         --color-scheme: light;
         --ecriture: black;
         --background: white;
-        --police: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        --police: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+            Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+            sans-serif;
         --scalenb: 0.5;
         --iframe-width: 560px;
         --iframe-height: 800px;
     }
-    
+
     html {
         /* color-scheme: dark !important; */
         color-scheme: var(--color-scheme);
@@ -22,14 +24,16 @@
         font-size: 1.5rem;
         font-family: var(--police);
     }
-    
+
     body {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+            Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+            sans-serif;
         font-size: 16px;
         line-height: 1.5;
         background-color: var(--background);
     }
-    
+
     #iframe {
         display: flex;
         /* width:30vh; */
@@ -39,20 +43,19 @@
         transform-origin: top left;
         margin: 10px;
     }
-    
+
     #iframe-1 {
         display: flex;
         /* margin: 5px; */
         background-color: transparent;
-    
     }
-    
+
     #iframe-2 {
         display: flex;
         /* margin: 5px; */
         background-color: transparent;
     }
-    
+
     .iframe-div-1 {
         /* display: block; */
         /* height: 2043px;
@@ -60,7 +63,7 @@
         height: var(--iframe-height);
         width: var(--iframe-width);
     }
-    
+
     .iframe-div-2 {
         /* display: block; */
         /* height: 2043px;
@@ -68,7 +71,7 @@
         height: var(--iframe-height);
         width: var(--iframe-width);
     }
-    
+
     iframe {
         /* width: 553px;
             height: 794px; */
@@ -79,7 +82,7 @@
         display: block;
         margin-bottom: 20px;
     }
-    
+
     #img {
         display: flex;
         margin: 5px;
@@ -88,16 +91,16 @@
         position: relative;
         transform-origin: top left;
     }
-    
+
     img {
         width: 50%;
     }
-    
+
     label {
         display: block;
         margin: 10px;
     }
-    
+
     input[type="text"] {
         padding: 5px;
         margin-bottom: 10px;
@@ -108,17 +111,17 @@
         width: 130px;
         border-color: var(--background);
     }
-    
+
     input[type="radio"] {
         margin-top: 10px;
         margin-right: 20px;
         margin-bottom: 10px;
         margin-left: 5px;
     }
-    
+
     button {
         /* padding: 5px; */
-        background-color: #4CAF50;
+        background-color: #4caf50;
         color: white;
         border: none;
         border-radius: 4px;
@@ -129,21 +132,19 @@
         width: 100px;
         height: 40px;
     }
-    
+
     button:hover {
         background-color: #3e8e41;
     }
-    
-    
-    
+
     button:last-child {
         margin-right: 10px;
     }
-    
+
     h1 {
         font-size: 15px;
     }
-    
+
     a {
         color: #3391ff;
     }
@@ -168,12 +169,14 @@
         --color-scheme: light;
         --ecriture: black;
         --background: white;
-        --police: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        --police: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+            Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+            sans-serif;
         --scalenb: 0.5;
         --iframe-width: 560px;
         --iframe-height: 800px;
     }
-    
+
     html {
         /* color-scheme: dark !important; */
         color-scheme: var(--color-scheme);
@@ -182,14 +185,16 @@
         font-size: 1.5rem;
         font-family: var(--police);
     }
-    
+
     body {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+            Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+            sans-serif;
         font-size: 16px;
         line-height: 1.5;
         background-color: var(--background);
     }
-    
+
     #iframe {
         display: flex;
         /* width:30vh; */
@@ -199,20 +204,19 @@
         transform-origin: top left;
         margin: 10px;
     }
-    
+
     #iframe-1 {
         display: flex;
         /* margin: 5px; */
         background-color: transparent;
-    
     }
-    
+
     #iframe-2 {
         display: flex;
         /* margin: 5px; */
         background-color: transparent;
     }
-    
+
     .iframe-div-1 {
         /* display: block; */
         /* height: 2043px;
@@ -220,7 +224,7 @@
         height: var(--iframe-height);
         width: var(--iframe-width);
     }
-    
+
     .iframe-div-2 {
         /* display: block; */
         /* height: 2043px;
@@ -228,7 +232,7 @@
         height: var(--iframe-height);
         width: var(--iframe-width);
     }
-    
+
     iframe {
         /* width: 553px;
             height: 794px; */
@@ -239,7 +243,7 @@
         display: block;
         margin-bottom: 20px;
     }
-    
+
     #img {
         display: flex;
         margin: 5px;
@@ -248,16 +252,16 @@
         position: relative;
         transform-origin: top left;
     }
-    
+
     img {
         width: 50%;
     }
-    
+
     label {
         display: block;
         margin: 10px;
     }
-    
+
     input[type="text"] {
         padding: 5px;
         margin-bottom: 10px;
@@ -268,17 +272,17 @@
         width: 300px;
         border-color: var(--background);
     }
-    
+
     input[type="radio"] {
         margin-top: 10px;
         margin-right: 20px;
         margin-bottom: 10px;
         margin-left: 5px;
     }
-    
+
     button {
         /* padding: 5px; */
-        background-color: #4CAF50;
+        background-color: #4caf50;
         color: white;
         border: none;
         border-radius: 4px;
@@ -289,21 +293,19 @@
         width: 200px;
         height: 40px;
     }
-    
+
     button:hover {
         background-color: #3e8e41;
     }
-    
-    
-    
+
     button:last-child {
         margin-right: 10px;
     }
-    
+
     h1 {
         font-size: 15px;
     }
-    
+
     a {
         color: #3391ff;
     }
@@ -321,4 +323,34 @@
 button:disabled {
     opacity: 0.5;
     cursor: not-allowed;
+}
+
+#slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: 0.2s;
+    transition: opacity 0.2s;
+}
+
+#slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4caf50;
+    cursor: pointer;
+}
+
+#slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4caf50;
+    cursor: pointer;
 }
